--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-mdx-remote": "^1.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-ga": "^3.1.2",
     "react-hot-loader": "^4.12.21",
     "regenerator-runtime": "^0.13.7",
     "styled-components": "^5.2.0"
