--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx", "components/TimelineStep.js"
   ],
   "exclude": [
     "node_modules"
