--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/mdx": "^9.5.3",
     "babel-plugin-styled-components": "^1.11.1",
     "babel-polyfill": "^6.26.0",
+    "firebase": "^7.21.0",
     "gray-matter": "^4.0.2",
     "next": "9.5.1",
     "next-mdx-remote": "^1.0.0",
@@ -25,7 +26,8 @@
     "react-ga": "^3.1.2",
     "react-hot-loader": "^4.12.21",
     "regenerator-runtime": "^0.13.7",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "swr": "^0.3.3"
   },
   "devDependencies": {
     "@types/node": "^14.10.3",
