--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@babel/preset-react": "^7.10.4",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
     "@mdx-js/loader": "^1.6.16",
     "@next/mdx": "^9.5.3",
     "babel-plugin-styled-components": "^1.11.1",
     "babel-polyfill": "^6.26.0",
+    "core-js": "3",
     "firebase": "^7.21.0",
     "gray-matter": "^4.0.2",
     "next": "9.5.1",
