--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "nextjs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@babel/plugin-proposal-export-default-from": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/styles": "^4.10.0",
-    "@mdx-js/loader": "^1.6.16",
-    "@next/mdx": "^9.5.3",
-    "babel-plugin-styled-components": "^1.11.1",
-    "babel-polyfill": "^6.26.0",
-    "core-js": "3",
-    "firebase": "^7.21.0",
-    "gray-matter": "^4.0.2",
-    "next": "9.5.1",
-    "next-mdx-remote": "^1.0.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-ga": "^3.1.2",
-    "react-hot-loader": "^4.12.21",
-    "regenerator-runtime": "^0.13.7",
-    "styled-components": "^5.2.0",
-    "swr": "^0.3.3"
-  },
-  "devDependencies": {
-    "@types/node": "^14.10.3",
-    "typescript": "^4.0.2"
-  }
+	"name": "nextjs",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next -p 8000",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@babel/plugin-proposal-export-default-from": "^7.10.4",
+		"@babel/preset-env": "^7.11.5",
+		"@babel/preset-react": "^7.10.4",
+		"@material-ui/core": "^4.11.0",
+		"@material-ui/icons": "^4.9.1",
+		"@material-ui/styles": "^4.10.0",
+		"@mdx-js/loader": "^1.6.16",
+		"@next/mdx": "^9.5.3",
+		"babel-plugin-styled-components": "^1.11.1",
+		"babel-polyfill": "^6.26.0",
+		"core-js": "3",
+		"firebase": "^7.21.0",
+		"gray-matter": "^4.0.2",
+		"next": "9.5.1",
+		"next-mdx-remote": "^1.0.0",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
+		"react-ga": "^3.1.2",
+		"react-hot-loader": "^4.12.21",
+		"regenerator-runtime": "^0.13.7",
+		"styled-components": "^5.2.0",
+		"swr": "^0.3.3"
+	},
+	"devDependencies": {
+		"@types/node": "^14.10.3",
+		"typescript": "^4.0.2"
+	}
 }
