--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
 		"core-js": "3",
 		"firebase": "^7.21.0",
 		"gray-matter": "^4.0.2",
+		"jss": "^10.4.0",
 		"next": "9.5.1",
 		"next-mdx-remote": "^1.0.0",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
 		"react-ga": "^3.1.2",
 		"react-hot-loader": "^4.12.21",
+		"react-jss": "^8.0.0",
 		"regenerator-runtime": "^0.13.7",
 		"styled-components": "^5.2.0",
 		"swr": "^0.3.3"
