--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "next -p 8000",
 		"build": "next build",
-		"start": "next start"
+		"start": "next start -p 8000"
 	},
 	"dependencies": {
 		"@babel/plugin-proposal-export-default-from": "^7.10.4",
