--- a/package.json
+++ b/package.json
@@ -23,13 +23,20 @@
 		"gray-matter": "^4.0.2",
 		"jss": "^10.4.0",
 		"next": "9.5.1",
+		"next-images": "^1.6.2",
 		"next-mdx-remote": "^1.0.0",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
 		"react-ga": "^3.1.2",
 		"react-hot-loader": "^4.12.21",
 		"react-jss": "^8.0.0",
+		"react-markdown": "^5.0.3",
 		"regenerator-runtime": "^0.13.7",
+		"remark": "^13.0.0",
+		"remark-comment-config": "^6.0.0",
+		"remark-embed-images": "^2.0.0",
+		"remark-html": "^13.0.1",
+		"remark-toc": "^7.0.0",
 		"styled-components": "^5.2.0",
 		"swr": "^0.3.3"
 	},
