--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
 		"@babel/plugin-proposal-export-default-from": "^7.10.4",
 		"@babel/preset-env": "^7.11.5",
 		"@babel/preset-react": "^7.10.4",
+		"@chakra-ui/react": "^1.6.9",
+		"@emotion/react": "^11",
+		"@emotion/styled": "^11",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/styles": "^4.11.3",
@@ -22,6 +25,7 @@
 		"date-fns": "^2.16.1",
 		"disqus-react": "^1.0.11",
 		"firebase": "^7.21.0",
+		"framer-motion": "^4",
 		"gray-matter": "^4.0.2",
 		"jss": "^10.4.0",
 		"next": "9.5.1",
@@ -33,6 +37,7 @@
 		"react-hot-loader": "^4.12.21",
 		"react-jss": "^8.0.0",
 		"react-markdown": "^5.0.3",
+		"react-responsive-carousel": "^3.2.21",
 		"regenerator-runtime": "^0.13.7",
 		"remark": "^13.0.0",
 		"remark-comment-config": "^6.0.0",
@@ -44,6 +49,6 @@
 	},
 	"devDependencies": {
 		"@types/node": "^14.10.3",
-		"typescript": "^4.0.2"
+		"typescript": "^4.1.0"
 	}
 }
