--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
 		"@babel/preset-env": "^7.11.5",
 		"@babel/preset-react": "^7.10.4",
 		"@chakra-ui/react": "^1.6.9",
-		"@emotion/react": "^11",
-		"@emotion/styled": "^11",
+		"@emotion/react": "^11.7.1",
+		"@emotion/styled": "^11.6.0",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/styles": "^4.11.3",
 		"@mdx-js/loader": "^1.6.16",
+		"@mui/material": "^5.2.6",
 		"@next/mdx": "^9.5.3",
 		"babel-plugin-styled-components": "^1.11.1",
 		"babel-polyfill": "^6.26.0",
@@ -31,8 +32,8 @@
 		"next": "9.5.1",
 		"next-images": "^1.6.2",
 		"next-mdx-remote": "^1.0.0",
-		"react": "16.13.1",
-		"react-dom": "16.13.1",
+		"react": "^17.0.0",
+		"react-dom": "^17.0.0",
 		"react-ga": "^3.1.2",
 		"react-hot-loader": "^4.12.21",
 		"react-jss": "^8.0.0",
