--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
 		"@babel/preset-env": "^7.11.5",
 		"@babel/preset-react": "^7.10.4",
 		"@chakra-ui/react": "^1.6.9",
-		"@emotion/react": "^11.7.1",
-		"@emotion/styled": "^11.6.0",
+		"@emotion/react": "^11.9.0",
+		"@emotion/styled": "^11.8.1",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/styles": "^4.11.3",
 		"@mdx-js/loader": "^1.6.16",
-		"@mui/material": "^5.2.6",
+		"@mui/icons-material": "^5.6.2",
+		"@mui/material": "^5.6.4",
 		"@next/mdx": "^9.5.3",
 		"babel-plugin-styled-components": "^1.11.1",
 		"babel-polyfill": "^6.26.0",
