--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@next/mdx": "^9.5.3",
 		"babel-plugin-styled-components": "^1.11.1",
 		"babel-polyfill": "^6.26.0",
+		"browserslist": "^4.21.1",
 		"core-js": "3",
 		"date-fns": "^2.16.1",
 		"disqus-react": "^1.0.11",
