--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 		"next": "9.5.1",
 		"next-images": "^1.6.2",
 		"next-mdx-remote": "^1.0.0",
+		"next-remote-watch": "^1.0.0",
+		"npm-watch": "^0.11.0",
 		"react": "^17.0.0",
 		"react-dom": "^17.0.0",
 		"react-ga": "^3.1.2",
