--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"framer-motion": "^4",
 		"gray-matter": "^4.0.2",
 		"jss": "^10.4.0",
-		"next": "9.5.1",
+		"next": "^12.3.1",
 		"next-images": "^1.6.2",
 		"next-mdx-remote": "^1.0.0",
 		"next-remote-watch": "^1.0.0",
