--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
 		"remark-html": "^13.0.1",
 		"remark-toc": "^7.0.0",
 		"styled-components": "^5.2.0",
-		"swr": "^0.3.3"
+		"swr": "^0.3.3",
+		"tailwind": "^4.0.0"
 	},
 	"devDependencies": {
 		"@types/node": "^14.10.3",
