--- a/package.json
+++ b/package.json
@@ -1,60 +1,66 @@
 {
-	"name": "nextjs",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next -p 8000",
-		"build": "next build",
-		"start": "next start -p 8000"
-	},
-	"dependencies": {
-		"@babel/plugin-proposal-export-default-from": "^7.10.4",
-		"@babel/preset-env": "^7.11.5",
-		"@babel/preset-react": "^7.10.4",
-		"@chakra-ui/react": "^1.6.9",
-		"@emotion/react": "^11.9.0",
-		"@emotion/styled": "^11.8.1",
-		"@material-ui/core": "^4.11.0",
-		"@material-ui/icons": "^4.9.1",
-		"@material-ui/styles": "^4.11.3",
-		"@mdx-js/loader": "^1.6.16",
-		"@mui/icons-material": "^5.6.2",
-		"@mui/material": "^5.6.4",
-		"@next/mdx": "^9.5.3",
-		"babel-plugin-styled-components": "^1.11.1",
-		"babel-polyfill": "^6.26.0",
-		"browserslist": "^4.21.1",
-		"core-js": "3",
-		"date-fns": "^2.16.1",
-		"disqus-react": "^1.0.11",
-		"firebase": "^7.21.0",
-		"framer-motion": "^4",
-		"gray-matter": "^4.0.2",
-		"jss": "^10.4.0",
-		"next": "^12.3.1",
-		"next-images": "^1.6.2",
-		"next-mdx-remote": "^1.0.0",
-		"next-remote-watch": "^1.0.0",
-		"npm-watch": "^0.11.0",
-		"react": "^17.0.0",
-		"react-dom": "^17.0.0",
-		"react-ga": "^3.1.2",
-		"react-hot-loader": "^4.12.21",
-		"react-jss": "^8.0.0",
-		"react-markdown": "^5.0.3",
-		"react-responsive-carousel": "^3.2.21",
-		"regenerator-runtime": "^0.13.7",
-		"remark": "^13.0.0",
-		"remark-comment-config": "^6.0.0",
-		"remark-embed-images": "^2.0.0",
-		"remark-html": "^13.0.1",
-		"remark-toc": "^7.0.0",
-		"styled-components": "^5.2.0",
-		"swr": "^0.3.3",
-		"tailwind": "^4.0.0"
-	},
-	"devDependencies": {
-		"@types/node": "^14.10.3",
-		"typescript": "^4.1.0"
-	}
+  "name": "nextjs",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next -p 8000",
+    "build": "next build",
+    "start": "next start -p 8000"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-export-default-from": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@chakra-ui/react": "^1.6.9",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.11.3",
+    "@mdx-js/loader": "^1.6.16",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.4",
+    "@next/mdx": "^9.5.3",
+    "babel-plugin-styled-components": "^1.11.1",
+    "babel-polyfill": "^6.26.0",
+    "browserslist": "^4.21.1",
+    "core-js": "3",
+    "date-fns": "^2.16.1",
+    "disqus-react": "^1.0.11",
+    "firebase": "^7.21.0",
+    "font-awesome": "^4.7.0",
+    "framer-motion": "^4",
+    "gray-matter": "^4.0.2",
+    "jss": "^10.4.0",
+    "next": "^12.3.1",
+    "next-images": "^1.6.2",
+    "next-mdx-remote": "^1.0.0",
+    "next-remote-watch": "^1.0.0",
+    "npm-watch": "^0.11.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-ga": "^3.1.2",
+    "react-hot-loader": "^4.12.21",
+    "react-jss": "^8.0.0",
+    "react-markdown": "^5.0.3",
+    "react-responsive-carousel": "^3.2.21",
+    "regenerator-runtime": "^0.13.7",
+    "remark": "^13.0.0",
+    "remark-comment-config": "^6.0.0",
+    "remark-embed-images": "^2.0.0",
+    "remark-html": "^13.0.1",
+    "remark-toc": "^7.0.0",
+    "styled-components": "^5.2.0",
+    "swr": "^0.3.3",
+    "tailwind": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.10.3",
+    "typescript": "^4.1.0"
+  }
 }
